# Neo-Minimalism

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO
res/gfx/shapes/start_up/: splash_large.obj~  splash_medium.obj~
res/gfx/tex/level/pick_ups/: health.xcf
res/info/: help.txt
res/levels/: hard.lvl
src/: Main.cpp
src/camera/: Camera.cpp  Camera.hpp
src/display/: DisplaySurface.cpp  DisplaySurface.hpp
src/engine/: Engine.cpp  Engine.hpp
src/entities/level/back_ground/: BelowPlanet.cpp  BelowPlanet.hpp  SpaceBox.cpp  SpaceBox.hpp
src/entities/level/effects/: Explosion.cpp  Explosion.hpp  ExplosionParticle.cpp  ExplosionParticle.hpp  PlayerTorpedoTrail.cpp  PlayerTorpedoTrail.hpp
src/entities/level/enemy/: Boss.cpp  Boss.hpp  Drone.cpp  Drone.hpp  Flyer.cpp  Flyer.hpp  Interceptor.cpp  Interceptor.hpp  Station.cpp  Station.hpp
src/entities/level/enviroment/: Asteroid.cpp  Asteroid.hpp  Wall.cpp  Wall.hpp
src/entities/level/pick_ups/: Health.cpp  Health.hpp  Missle.cpp  Missle.hpp
src/entities/level/player/: Player.cpp  Player.hpp
src/entities/level/weapons/: EnemyLasor.cpp  EnemyLasor.hpp  EnemyTorpedo.cpp  EnemyTorpedo.hpp  PlayerLasor.cpp  PlayerLasor.hpp  PlayerTorpedo.cpp  PlayerTorpedo.hpp  PlayerTorpedoTrail.cpp
src/entities/start_up/: Splash.cpp  Splash.hpp
src/entity/: CollisionType.hpp  Entity.hpp  Renderable.hpp
src/entity_list/: EntityList.cpp  EntityList.hpp
src/event/: Event.cpp  Event.hpp
src/exceptions/: EngineException.hpp  SDLException.hpp
src/physics/: PhysicsController.cpp  PhysicsController.hpp
src/physics/bounding/: Bounding.hpp  BoundingBox.hpp
src/renderer/: Renderer.cpp  Renderer.hpp
src/resource/: Groups.hpp  ResourceManager.cpp  ResourceManager.hpp
src/resource/types/: ShapeResource.cpp  ShapeResource.hpp  TextureResource.cpp  TextureResource.hpp
src/resource/utilities/: OBJLoader.cpp  OBJLoader.hpp  PNGLoader.cpp  PNGLoader.hpp
src/shape/: Shape.hpp
src/shape/triangle/: TriangleCol.cpp  TriangleCol.hpp  TriangleTex.cpp  TriangleTex.hpp
src/states/level/: Level.cpp  Level.hpp  Level_Event.cpp
src/states/start_up/: StartUp.cpp  StartUp.hpp  StartUp_Event.cpp
src/sub_engine/: SubEngine.hpp
